@@ -81,6 +81,7 @@ Fixes:
    Ben Ramsey. [MG]
  * Fix a crash bug in @function/restrict on malformed input. Reported by
    Padraic. [SW]
+ * Some fixes to the test suite. Reported by Covenent. [MG]
 
 Version 1.8.4 patchlevel 6                                 Jul 29,  2011
 
